[package]
name = "lrumap"
version = "0.1.0"
edition = "2021"
description = "A safe Least Recently Used (LRU) cache implementation with ordered and unordered support."
repository = "https://github.com/khonsulabs/lrumap"
license = "MIT OR Apache-2.0"
keywords = ["lru", "cache"]
categories = ["caching", "data-structures"]
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.12.0", optional = true }

[profile.bench]
lto = true

[workspace]
members = ["./benchmarks"]
