[package]
name = "lrumap"
version = "0.1.0"
edition = "2021"
description = "A safe Least Recently Used (LRU) cache implementation with ordered and unordered support."
repository = "https://github.com/khonsulabs/lrumap"
license = "MIT OR Apache-2.0"
keywords = ["lru", "cache"]
categories = ["caching", "data-structures"]
readme = "./README.md"

[dependencies]
hashbrown = { version = "0.13.2", optional = true }

[profile.bench]
lto = true

[workspace]
members = ["./benchmarks", "./xtask"]
