[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[[bench]]
name = "suite"
harness = false

[features]
hashbrown = ["ordered-lru/hashbrown", "lru/hashbrown"]

[dependencies]
lru = { version = "0.7.5", default-features = false }
ordered-lru = { path = "../" }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand = "0.8"
